--- a/SlipBot/SlipBot/SlipBot.csproj
+++ b/SlipBot/SlipBot/SlipBot.csproj
@@ -11,7 +11,8 @@
   <ItemGroup>
     <PackageReference Include="DSharpPlus" Version="4.4.5" />
     <PackageReference Include="DSharpPlus.Interactivity" Version="4.4.5" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
+    <PackageReference Include="DSharpPlus.SlashCommands" Version="4.4.5" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
